Fix margin alignment on CourseInfo cards

--- a/src/containers/CourseInfoCard/CourseInfoCard.css
+++ b/src/containers/CourseInfoCard/CourseInfoCard.css
@@ -2,14 +2,14 @@
 	border: 3px solid #febb00;
   color: #524949;
 	width: 20rem;
-  text-align: left;
+  text-align: center;
 	margin: 1rem auto;
 	height: 24rem;
 	background-color: #FFF;
 	border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   padding: 0 0 1rem 0;
   box-shadow: 0px 0px 1px 2px #Feeb00;
@@ -20,6 +20,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 90%;
+	margin: 1rem 0 0;
 }
 
 .favorite-btn {
@@ -65,7 +66,11 @@
 
 .course-info-header {
 	font-weight: 700;
-	margin: 0 0 0 0.25rem;
+	/*margin: 0 0 0 0.25rem;*/
+}
+
+p {
+	margin: 0.75rem 0;
 }
 
 .course-weather-btn {
